css/style.css
h1 {
    font-family: "brandon-grotesque",sans-serif;
    font-style: normal;
    font-weight: 700;
    font-size: 55px;
    text-transform: uppercase;
    letter-spacing: 0.2em;
	margin-left: 0;
    margin-top: 20px;
    text-align: center;
    color:#3B3A3A;
}
h2 {
	font-family: courier, #B5B5B5;
	vertical-align: center
	font-size: 20px;
}
html {
    background-color: #FF99CC
}

body {
    background-color: white;
    padding: 30px;
}
i {
    color:#343440;
}

i:hover
{
    color:#FF99CC;
}
a {
    color:#FF99C2;
  }
p {
	font-family: courier;
	font-size: 20px;
    line-height:25px;
	color: #343440;
    margin-top: 1em;
    margin-bottom: 1em;
}
h2 {
  vertical-align: center;
  font-size: 20px;
  text-decoration: none;
}
#contact-block {
    display: inline-block;
    background-color: black;
    clear: both;
    float:top;
}
#contact-block a{
    color:#C9C9C9;
    text-decoration: none
}
.content {
    width: 80%;
    vertical-align: center;
    margin:0 auto;
}

.posts {
    vertical-align: center;
}

.posts div{
    font-family: courier;
    font-size:20px;
    color: #343440;
    vertical-align: center
}

.nav{
    font-family: courier;
    list-style:none;
    margin-top: 10px;
    vertical-align: center;
    padding:0;
    text-align:center;
    font-size: 18px;
    background-color: none;
}
.nav li{
    display:inline;
}
.nav a{
    display:inline-block;
    padding:10px;
    color: gray;
    text-decoration: none;
}
.page-wrap{
    background-color:white;
}
.rotate{
    -webkit-transition-duration: 0.8s;
    -moz-transition-duration: 0.8s;
    -o-transition-duration: 0.8s;
    transition-duration: 0.8s;
    -webkit-transition-property: -webkit-transform;
    -moz-transition-property: -moz-transform;
    -o-transition-property: -o-transform;
    transition-property: transform;
    overflow:hidden;
    display: block;
    margin-left: auto;
    margin-right: auto
    }
.rotate:hover
{
    -webkit-transform:rotate(360deg);
    -moz-transform:rotate(360deg);
    -o-transform:rotate(360deg);
}

